// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Introspection 1. No remote graphql servers 1`] = `
Object {
  "policies": Array [],
  "schemas": Array [
    Object {
      "metadata": Object {
        "name": "schema-1",
        "namespace": "ns",
      },
      "schema": "type Query {
  foo: String!
}
",
    },
  ],
  "upstreamClientCredentials": Array [],
  "upstreams": Array [],
}
`;

exports[`Introspection 2. New unknown remote graphql server 1`] = `
Object {
  "policies": Array [],
  "remoteSchemas": Array [
    Object {
      "schema": "type Query {
  foo: String
}
",
      "url": "http://remote-gql-test-2/graphql",
    },
  ],
  "schemas": Array [
    Object {
      "metadata": Object {
        "name": "schema-2",
        "namespace": "ns",
      },
      "schema": "type Query {
  foo: String! @gql(url: \\"http://remote-gql-test-2/graphql\\", fieldName: \\"foo\\")
}
",
    },
  ],
  "upstreamClientCredentials": Array [],
  "upstreams": Array [],
}
`;

exports[`Introspection 3. Known remote graphql server 1`] = `
Object {
  "policies": Array [],
  "remoteSchemas": Array [
    Object {
      "schema": "type Query {
  foo: String
}
",
      "url": "http://remote-gql-test-3/graphql",
    },
  ],
  "schemas": Array [
    Object {
      "metadata": Object {
        "name": "schema-3",
        "namespace": "ns",
      },
      "schema": "type Query {
  foo: String! @gql(url: \\"http://remote-gql-test-3/graphql\\", fieldName: \\"foo\\")
}
",
    },
  ],
  "upstreamClientCredentials": Array [],
  "upstreams": Array [],
}
`;

exports[`Introspection 4. One known and one unknown graphql servers 1`] = `
Object {
  "policies": Array [],
  "remoteSchemas": Array [
    Object {
      "schema": "type Query {
  bar: String
}
",
      "url": "http://remote-gql-test-4-1/graphql",
    },
    Object {
      "schema": "type Query {
  bar: String
}
",
      "url": "http://remote-gql-test-4-2/graphql",
    },
  ],
  "schemas": Array [
    Object {
      "metadata": Object {
        "name": "schema-4",
        "namespace": "ns",
      },
      "schema": "type Query {
  foo: String! @gql(url: \\"http://remote-gql-test-4-1/graphql\\", fieldName: \\"foo\\")
  bar: String! @gql(url: \\"http://remote-gql-test-4-2/graphql\\", fieldName: \\"bar\\")
}
",
    },
  ],
  "upstreamClientCredentials": Array [],
  "upstreams": Array [],
}
`;

exports[`Introspection 5. Error from remote graphql server 1`] = `[Error: Introspection query to http://remote-gql-test-5/graphql failed]`;

exports[`Introspection 6. One known, one unknown and one removed graphql servers 1`] = `
Object {
  "policies": Array [],
  "remoteSchemas": Array [
    Object {
      "schema": "type Query {
  bar: String
}
",
      "url": "http://remote-gql-test-6-1/graphql",
    },
    Object {
      "schema": "type Query {
  bar: String
}
",
      "url": "http://remote-gql-test-6-2/graphql",
    },
  ],
  "schemas": Array [
    Object {
      "metadata": Object {
        "name": "schema-6",
        "namespace": "ns",
      },
      "schema": "type Query {
  foo: String! @gql(url: \\"http://remote-gql-test-6-1/graphql\\", fieldName: \\"foo\\")
  bar: String! @gql(url: \\"http://remote-gql-test-6-2/graphql\\", fieldName: \\"bar\\")
}
",
    },
  ],
  "upstreamClientCredentials": Array [],
  "upstreams": Array [],
}
`;
